[project]
name = "notipi"
version = "0.0.1"
description = "A package to deliver notifications via your telegram bot"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [ "anyio==4.4.0", "certifi==2024.6.2", "enum34==1.1.10", "h11==0.14.0", "httpcore==1.0.5", "httpx==0.27.0", "idna==3.7", "python-dotenv==1.0.1", "python-telegram-bot==21.2", "sniffio==1.3.1",]
[[project.authors]]
name = "Harshit Sharma"
email = "harshit158@gmail.com"

[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = [ "src",]
